--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,69 @@
-<div class="grid h-screen place-items-center">
-  <div class="font-bold text-3xl">
-    Fyle Internship Challenge
+<nav
+  class="flex items-center justify-between flex-wrap bg-white py-4 lg:px-12 shadow border-solid border-t-2 border-blue-700">
+  <div
+    class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
+    <div class="flex items-center flex-shrink-0 text-gray-800 mr-16">
+      <span class="font-semibold text-xl tracking-tight">Fyle Assignment</span>
+    </div>
+    <div class="block lg:hidden">
+      <button id="nav"
+        class="flex items-center px-3 py-2 border-2 rounded text-blue-700 border-blue-700 hover:text-blue-700 hover:border-blue-700">
+        <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          <title>Menu</title>
+          <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+        </svg>
+      </button>
+    </div>
+  </div>
+</nav>
+
+
+
+<div class="mx-auto flex justify-center mt-8">
+
+  <!-- Search Bar -->
+  <input type="text" placeholder="Search"
+    class="px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+  <button
+    class="px-4 py-2 ml-2 text-white bg-blue-500 rounded-md hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Search</button>
+
+</div>
+
+<div class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7">
+  <div class="flex items-left ">
+    <div class="flex items-center">
+      <div class="w-16 h-16 rounded-full bg-gray-300">
+        <img class="img-responsive" src="https://avatars.githubusercontent.com/u/45514385">
+
+      </div> <!-- Profile Image -->
+      <div class="ml-4">
+        <div>Name</div>
+        <div>Description</div>
+        <div>Location</div>
+        <div>Social</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5">
+  <div class="rounded overflow-hidden shadow-lg">
+    <!-- <img class="w-full" src="/mountain.jpg" alt="Mountain"> -->
+    <div class="px-6 py-4">
+      <div class="font-bold text-xl mb-2">Mountain</div>
+      <p class="text-gray-700 text-base">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, Nonea! Maiores et perferendis
+        eaque, exercitationem praesentium nihil.
+      </p>
+    </div>
+    <div class="px-6 pt-4 pb-2">
+      <span
+        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#photography</span>
+      <span
+        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#travel</span>
+      <span
+        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
+    </div>
   </div>
 </div>
