--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
 <!-- This is the navigation bar at the top of the page -->
-<nav
-  class="flex items-center justify-between flex-wrap bg-white py-4 lg:px-12 shadow border-solid border-t-2 border-blue-700">
-  <div
-    class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
+<nav class="flex items-center justify-between flex-wrap bg-white py-4 lg:px-12 shadow border-solid border-t-2 border-blue-700">
+  <div class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
     <div class="flex items-center flex-shrink-0 text-gray-800 mr-16">
       <span class="font-semibold text-xl tracking-tight">Fyle Assignment</span>
     </div>
     <div class="block lg:hidden">
-      <button id="nav"
-        class="flex items-center px-3 py-2 border-2 rounded text-blue-700 border-blue-700 hover:text-blue-700 hover:border-blue-700">
+      <button id="nav" class="flex items-center px-3 py-2 border-2 rounded text-blue-700 border-blue-700 hover:text-blue-700 hover:border-blue-700">
         <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
           <title>Menu</title>
           <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
@@ -18,13 +15,12 @@
   </div>
 </nav>
 
+<!-- This is the search form -->
 <form (submit)="getResults(searchInput.value)">
   <!-- Form fields here -->
   <div class="mx-auto flex justify-center mt-8">
-    <input type="text" #searchInput placeholder="Search"
-      class="px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
-    <button type="submit"
-      class="px-4 py-2 ml-2 text-white bg-blue-500 rounded-md hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Search</button>
+    <input type="text" #searchInput placeholder="Search" class="px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+    <button type="submit" class="px-4 py-2 ml-2 text-white bg-blue-500 rounded-md hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Search</button>
   </div>
 </form>
 
@@ -42,14 +38,12 @@
         <div *ngIf="userData?.bio"><strong>Bio:</strong> {{userData?.bio}}</div>
         <div *ngIf="userData?.location"><strong>Location:</strong> {{userData?.location}}</div>
         <div *ngIf="userData?.twitter">
-          <a href="https://twitter.com/{{userData?.twitter_username}}"
-            class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
+          <a href="https://twitter.com/{{userData?.twitter_username}}" class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
             Twitter
           </a>
         </div>
         <div *ngIf="userData?.html_url">
-          <a href="https://twitter.com/{{userData?.html_url}}"
-            class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
+          <a href="https://twitter.com/{{userData?.html_url}}" class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
             GitHub
           </a>
         </div>
@@ -70,61 +64,41 @@
     </div>
     <div class="px-6 pt-4 pb-2">
       <!-- Loop through tags and display them as badges -->
-      <span *ngFor="let tag of item.topics"
-        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">
+      <span *ngFor="let tag of item.topics" class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">
         {{ tag }}
       </span>
     </div>
   </div>
 </div>
 
-
-<div class="flex flex-col lg:flex-row items-center space-x-2 text-xs flex flex-col lg:flex-row justify-center mb-8">
-  <select data-te-select-init >
-    <option value="1" selected>10</option>
-    <option value="2">25</option>
-    <option value="3">50</option>
-    <option value="4">100</option>
-  </select>
-  
-  <p class="text-gray-500 mt-4 lg:mt-0">Items per page (Max:100)</p>
-</div>
-
-<div class="flex flex-col lg:flex-row justify-center">
-
+<!-- This is the pagination section -->
+<div class="flex flex-col lg:flex-row justify-between mx-7 mb-5">
+  <div class="flex items-center">
+    <select #itemsPerPageSelect [(ngModel)]="selectedOption" (change)="updatePerPage(itemsPerPageSelect.value)" name="option" class="px-4 py-2 ml-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+      <option value="10">10</option>
+      <option value="20">20</option>
+      <option value="50">50</option>
+      <option value="100">100</option>
+    </select>
+    <p class="text-gray-500 mt-4 lg:mt-0 text-lg ml-2">Items per page (Max:100)</p>
+  </div>
   <nav aria-label="Page navigation">
     <ul class="inline-flex">
-      <li><button
-          class="h-10 px-5 text-white transition-colors duration-150 bg-indigo-600 rounded-l-lg focus:shadow-outline"
-          (click)="updateCurrentPageNumber(1)">First</button></li>
-      <li><button
-          class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline hover:bg-indigo-100"
-          *ngIf="currentPage > 1" (click)="updateCurrentPageNumber(currentPage-1)">Prev</button></li>
-      <li><button
-          class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline hover:bg-indigo-100">{{currentPage}}/{{maxPage}}</button>
+      <li>
+        <button class="h-10 px-5 text-black transition-colors duration-150 bg-gray-200 rounded-l-lg focus:shadow-outline hover:bg-gray-900 hover:text-white" (click)="updateCurrentPageNumber(1)">First</button>
       </li>
-      <li><button
-          class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline hover:bg-indigo-100"
-          *ngIf="currentPage < maxPage" (click)="updateCurrentPageNumber(currentPage+1)">Next</button></li>
-      <li><button
-          class="h-10 px-5 text-white transition-colors duration-150 bg-indigo-600 rounded-r-lg focus:shadow-outline"
-          (click)="updateCurrentPageNumber(maxPage)">Last</button></li>
-
+      <li>
+        <button class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline hover:bg-blue-500 hover:text-white" *ngIf="currentPage > 1" (click)="updateCurrentPageNumber(currentPage-1)">Prev</button>
+      </li>
+      <li>
+        <button class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline">{{currentPage}}/{{maxPage}}</button>
+      </li>
+      <li>
+        <button class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline hover:bg-blue-500 hover:text-white" *ngIf="currentPage < maxPage" (click)="updateCurrentPageNumber(currentPage+1)">Next</button>
+      </li>
+      <li>
+        <button class="h-10 px-5 text-black transition-colors duration-150 bg-gray-200 rounded-r-lg focus:shadow-outline hover:bg-gray-900 hover:text-white" (click)="updateCurrentPageNumber(maxPage)">Last</button>
+      </li>
     </ul>
   </nav>
 </div>
-
-<!-- <div ng-app="myApp" ng-controller="myCtrl">
-  <div ng-repeat="item in data | pagination: currentPage : itemsPerPage">
-    <div ng-app="myApp" ng-controller="myCtrl">
-      <div ng-repeat="item in data | pagination: currentPage : itemsPerPage">
-        {{item}}
-      </div>
-      <button ng-click="previousPage()">Previous</button>
-      <button ng-click="nextPage()">Next</button>
-    </div>
-  </div>
-  <button ng-click="previousPage()">Previous</button>
-  <button ng-click="nextPage()">Next</button>
-</div> -->
-
