--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
 <!-- This is the navigation bar at the top of the page -->
-<nav class="flex items-center justify-between flex-wrap bg-white py-4 lg:px-12 shadow border-solid border-t-2 border-blue-700">
-  <div class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
+<nav
+  class="flex items-center justify-between flex-wrap bg-white py-4 lg:px-12 shadow border-solid border-t-2 border-blue-700">
+  <div
+    class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
     <div class="flex items-center flex-shrink-0 text-gray-800 mr-16">
       <span class="font-semibold text-xl tracking-tight">Fyle Assignment</span>
     </div>
     <div class="block lg:hidden">
-      <button id="nav" class="flex items-center px-3 py-2 border-2 rounded text-blue-700 border-blue-700 hover:text-blue-700 hover:border-blue-700">
+      <button id="nav"
+        class="flex items-center px-3 py-2 border-2 rounded text-blue-700 border-blue-700 hover:text-blue-700 hover:border-blue-700">
         <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
           <title>Menu</title>
           <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
@@ -19,13 +22,23 @@
 <form (submit)="getResults(searchInput.value)">
   <!-- Form fields here -->
   <div class="mx-auto flex justify-center mt-8">
-    <input type="text" #searchInput placeholder="Search" class="px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
-    <button type="submit" class="px-4 py-2 ml-2 text-white bg-blue-500 rounded-md hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Search</button>
+    <input type="text" #searchInput placeholder="Search"
+      class="px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+    <button type="submit"
+      class="px-4 py-2 ml-2 text-white bg-blue-500 rounded-md hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Search</button>
   </div>
 </form>
 
+<div *ngIf="isLoading"
+class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
+  <div class="rounded overflow-hidden" >
+    <ngx-skeleton-loader class="w-38rem h-10rem min-w-300 min-h-300 bg-gray-50"
+      [theme]='{"width":"100%","height":"15rem","backgroundColor":"#E5E7EB"}'></ngx-skeleton-loader>
+  </div>
+</div>
+
 <!-- This is the user profile section -->
-<div class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
+<div *ngIf="!isLoading" class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
   <div class="flex items-left ">
     <div class="flex items-center">
       <div class="w-32 h-32 rounded-full ">
@@ -38,12 +51,14 @@
         <div *ngIf="userData?.bio"><strong>Bio:</strong> {{userData?.bio}}</div>
         <div *ngIf="userData?.location"><strong>Location:</strong> {{userData?.location}}</div>
         <div *ngIf="userData?.twitter">
-          <a href="https://twitter.com/{{userData?.twitter_username}}" class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
+          <a href="https://twitter.com/{{userData?.twitter_username}}"
+            class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
             Twitter
           </a>
         </div>
         <div *ngIf="userData?.html_url">
-          <a href="https://twitter.com/{{userData?.html_url}}" class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
+          <a href="https://twitter.com/{{userData?.html_url}}"
+            class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
             GitHub
           </a>
         </div>
@@ -53,8 +68,20 @@
 </div>
 
 <!-- This is the grid section for displaying repository data -->
-<div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5 min-h-800">
+<div *ngIf="isLoading"
+  class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5 min-h-800">
+  <div class="rounded overflow-hidden shadow-lg" *ngFor="let item of [].constructor(9); let i = index">
+    <ngx-skeleton-loader class="w-38rem h-10rem min-w-300 min-h-300 bg-gray-50"
+      [theme]='{"width":"100%","height":"15rem","backgroundColor":"#E5E7EB"}'></ngx-skeleton-loader>
+  </div>
+</div>
+
+<!-- This is the grid section for displaying repository data -->
+<div *ngIf="!isLoading"
+  class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5 min-h-800">
+
   <!-- Loop through JSON data and display repository cards -->
+
   <div class="rounded overflow-hidden shadow-lg" *ngFor="let item of repoData">
     <div class="px-6 py-4">
       <div class="font-bold text-xl mb-2">{{ item.name }}</div>
@@ -64,17 +91,21 @@
     </div>
     <div class="px-6 pt-4 pb-2">
       <!-- Loop through tags and display them as badges -->
-      <span *ngFor="let tag of item.topics" class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">
+      <span *ngFor="let tag of item.topics"
+        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">
         {{ tag }}
       </span>
     </div>
   </div>
+
 </div>
 
 <!-- This is the pagination section -->
 <div class="flex flex-col lg:flex-row justify-between mx-7 mb-5">
   <div class="flex items-center">
-    <select #itemsPerPageSelect [(ngModel)]="selectedOption" (change)="updatePerPage(itemsPerPageSelect.value)" name="option" class="px-4 py-2 ml-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+    <select #itemsPerPageSelect [(ngModel)]="selectedOption" (change)="updatePerPage(itemsPerPageSelect.value)"
+      name="option"
+      class="px-4 py-2 ml-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
       <option value="10">10</option>
       <option value="20">20</option>
       <option value="50">50</option>
@@ -85,19 +116,28 @@
   <nav aria-label="Page navigation">
     <ul class="inline-flex">
       <li>
-        <button class="h-10 px-5 text-black transition-colors duration-150 bg-gray-200 rounded-l-lg focus:shadow-outline hover:bg-gray-900 hover:text-white" (click)="updateCurrentPageNumber(1)">First</button>
+        <button
+          class="h-10 px-5 text-black transition-colors duration-150 bg-gray-200 rounded-l-lg focus:shadow-outline hover:bg-gray-900 hover:text-white"
+          (click)="updateCurrentPageNumber(1)">First</button>
       </li>
       <li>
-        <button class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline hover:bg-blue-500 hover:text-white" *ngIf="currentPage > 1" (click)="updateCurrentPageNumber(currentPage-1)">Prev</button>
+        <button
+          class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline hover:bg-blue-500 hover:text-white"
+          *ngIf="currentPage > 1" (click)="updateCurrentPageNumber(currentPage-1)">Prev</button>
       </li>
       <li>
-        <button class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline">{{currentPage}}/{{maxPage}}</button>
+        <button
+          class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline">{{currentPage}}/{{maxPage}}</button>
       </li>
       <li>
-        <button class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline hover:bg-blue-500 hover:text-white" *ngIf="currentPage < maxPage" (click)="updateCurrentPageNumber(currentPage+1)">Next</button>
+        <button
+          class="h-10 px-5 text-indigo-600 transition-colors duration-150 bg-white focus:shadow-outline hover:bg-blue-500 hover:text-white"
+          *ngIf="currentPage < maxPage" (click)="updateCurrentPageNumber(currentPage+1)">Next</button>
       </li>
       <li>
-        <button class="h-10 px-5 text-black transition-colors duration-150 bg-gray-200 rounded-r-lg focus:shadow-outline hover:bg-gray-900 hover:text-white" (click)="updateCurrentPageNumber(maxPage)">Last</button>
+        <button
+          class="h-10 px-5 text-black transition-colors duration-150 bg-gray-200 rounded-r-lg focus:shadow-outline hover:bg-gray-900 hover:text-white"
+          (click)="updateCurrentPageNumber(maxPage)">Last</button>
       </li>
     </ul>
   </nav>
