--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,16 +29,24 @@
   </div>
 </form>
 
-<div *ngIf="isLoading"
-class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
-  <div class="rounded overflow-hidden" >
+<ng-container *ngIf="!isLoading  && !user">
+  <div class="max-w-md mx-auto px-4 sm:px-6 lg:px-8 mt-20 mb-10">
+    <div class="bg-red-500 text-white rounded-lg shadow p-6 text-center">
+      <h2 class="text-2xl font-bold mb-4">⚠️ Error</h2>
+      <p class="text-gray-200 mb-4">{{ errorMessage }}</p>
+    </div>
+  </div>
+</ng-container>
+
+<div *ngIf="isLoading && user" class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
+  <div class="rounded overflow-hidden">
     <ngx-skeleton-loader class="w-38rem h-10rem min-w-300 min-h-300 bg-gray-50"
       [theme]='{"width":"100%","height":"15rem","backgroundColor":"#E5E7EB"}'></ngx-skeleton-loader>
   </div>
 </div>
 
 <!-- This is the user profile section -->
-<div *ngIf="!isLoading" class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
+<div *ngIf="!isLoading && user" class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
   <div class="flex items-left ">
     <div class="flex items-center">
       <div class="w-32 h-32 rounded-full ">
@@ -68,7 +76,7 @@ class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-9
 </div>
 
 <!-- This is the grid section for displaying repository data -->
-<div *ngIf="isLoading"
+<div *ngIf="isLoading && user"
   class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5 min-h-800">
   <div class="rounded overflow-hidden shadow-lg" *ngFor="let item of [].constructor(9); let i = index">
     <ngx-skeleton-loader class="w-38rem h-10rem min-w-300 min-h-300 bg-gray-50"
@@ -101,7 +109,7 @@ class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-9
 </div>
 
 <!-- This is the pagination section -->
-<div class="flex flex-col lg:flex-row justify-between mx-7 mb-5">
+<div *ngIf="user" class="flex flex-col lg:flex-row justify-between mx-7 mb-5">
   <div class="flex items-center">
     <select #itemsPerPageSelect [(ngModel)]="selectedOption" (change)="updatePerPage(itemsPerPageSelect.value)"
       name="option"
