--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,37 @@
 <!-- This is the navigation bar at the top of the page -->
 <nav
   class="flex items-center justify-between flex-wrap bg-white py-4 lg:px-12 shadow border-solid border-t-2 border-blue-700">
+
   <div
     class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
     <div class="flex items-center flex-shrink-0 text-gray-800 mr-16">
       <span class="font-semibold text-xl tracking-tight">Fyle Assignment</span>
     </div>
-    <div class="block lg:hidden">
-      <button id="nav"
-        class="flex items-center px-3 py-2 border-2 rounded text-blue-700 border-blue-700 hover:text-blue-700 hover:border-blue-700">
-        <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-          <title>Menu</title>
-          <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-        </svg>
-      </button>
-    </div>
+  </div>
+
+  <div class="block">
+    <a href="https://github.com/fork-of-sahil/fyle-internship-challenge-23" target="_blank">
+    <button id="nav"
+      class="flex items-center px-3 py-2 border-2 rounded text-blue-700  hover:bg-blue-500 hover:text-white hover:border-blue-700">
+      Source Code
+    </button>
+  </a>
   </div>
 </nav>
+
+<div class="max-w-lg mt-4 rounded overflow-hidden mx-auto h-300 w-200">
+  <div class="px-6 py-4">
+    <div class="font-bold text-xl mb-2 ">Repos Time!</div>
+    <p class="text-gray-700 text-base pb-2">
+      Welcome to our GitHub repository explorer! To access details of a user's repositories.
+    </p>
+    <p class="text-gray-700 text-base pt-3">
+      This will display a list of repositories associated with the provided username. Click on any repository to explore
+      its contents and details.
+      Happy exploring!
+    </p>
+  </div>
+</div>
 
 <!-- This is the search form -->
 <form (submit)="getResults(searchInput.value)">
@@ -29,16 +44,16 @@
   </div>
 </form>
 
-<ng-container *ngIf="!isLoading  && !user">
+<ng-container *ngIf="!isLoading && !user && errorMessage!==''">
   <div class="max-w-md mx-auto px-4 sm:px-6 lg:px-8 mt-20 mb-10">
     <div class="bg-red-500 text-white rounded-lg shadow p-6 text-center">
-      <h2 class="text-2xl font-bold mb-4">⚠️ Error</h2>
-      <p class="text-gray-200 mb-4">{{ errorMessage }}</p>
+      <h2 class="text-2xl font-bold mb-4">Oops! Invalid Username.</h2>
+      <p class="text-white mb-4">{{ errorMessage }}</p>
     </div>
   </div>
 </ng-container>
 
-<div *ngIf="isLoading && user" class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
+<div *ngIf="isLoading" class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
   <div class="rounded overflow-hidden">
     <ngx-skeleton-loader class="w-38rem h-10rem min-w-300 min-h-300 bg-gray-50"
       [theme]='{"width":"100%","height":"15rem","backgroundColor":"#E5E7EB"}'></ngx-skeleton-loader>
@@ -46,37 +61,38 @@
 </div>
 
 <!-- This is the user profile section -->
-<div *ngIf="!isLoading && user" class="mx-auto max-w-md p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
-  <div class="flex items-left ">
-    <div class="flex items-center">
-      <div class="w-32 h-32 rounded-full ">
-        <div class="mr-3">
-          <img class="img-responsive" src="{{userData?.avatar_url}}">
-        </div>
+<div *ngIf="!isLoading && user" class="mx-auto max-w-lg p-4 bg-white rounded-md shadow-md mt-7 min-w-300 min-h-900">
+  <div class="mx-auto flex items-center justify-center">
+    <div class="w-32 h-32 rounded-full">
+      <div class="mr-3 max-w-md max-h-md">
+        <img class="img-responsive" src="{{userData?.avatar_url}}">
       </div>
-      <div class="ml-4">
-        <div *ngIf="userData?.name"><strong>Name:</strong> {{userData?.name}}</div>
-        <div *ngIf="userData?.bio"><strong>Bio:</strong> {{userData?.bio}}</div>
-        <div *ngIf="userData?.location"><strong>Location:</strong> {{userData?.location}}</div>
-        <div *ngIf="userData?.twitter">
-          <a href="https://twitter.com/{{userData?.twitter_username}}"
-            class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
-            Twitter
-          </a>
-        </div>
-        <div *ngIf="userData?.html_url">
-          <a href="https://twitter.com/{{userData?.html_url}}"
-            class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
-            GitHub
-          </a>
-        </div>
+    </div>
+  </div>
+
+  <div class="flex items-right">
+    <div class="ml-4">
+      <div *ngIf="userData?.name"><strong>Name:</strong> {{userData?.name}}</div>
+      <div *ngIf="userData?.bio"><strong>Bio:</strong> {{userData?.bio}}</div>
+      <div *ngIf="userData?.location"><strong>Location:</strong> {{userData?.location}}</div>
+      <div *ngIf="userData?.twitter">
+        <a href="https://twitter.com/{{userData?.twitter_username}}"
+          class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
+          Twitter
+        </a>
+      </div>
+      <div *ngIf="userData?.html_url">
+        <a href="https://twitter.com/{{userData?.html_url}}"
+          class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
+          GitHub
+        </a>
       </div>
     </div>
   </div>
 </div>
 
 <!-- This is the grid section for displaying repository data -->
-<div *ngIf="isLoading && user"
+<div *ngIf="isLoading"
   class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5 min-h-800">
   <div class="rounded overflow-hidden shadow-lg" *ngFor="let item of [].constructor(9); let i = index">
     <ngx-skeleton-loader class="w-38rem h-10rem min-w-300 min-h-300 bg-gray-50"
@@ -85,9 +101,8 @@
 </div>
 
 <!-- This is the grid section for displaying repository data -->
-<div *ngIf="!isLoading"
+<div *ngIf="!isLoading && user"
   class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5 min-h-800">
-
   <!-- Loop through JSON data and display repository cards -->
 
   <div class="rounded overflow-hidden shadow-lg" *ngFor="let item of repoData">
@@ -105,7 +120,6 @@
       </span>
     </div>
   </div>
-
 </div>
 
 <!-- This is the pagination section -->
