--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <div
     class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
     <div class="flex items-center flex-shrink-0 text-gray-800 mr-16">
-      <span class="font-semibold text-xl tracking-tight">Fyle Assignment</span>
+      <span class="font-semibold text-xl tracking-tight">GitHub-Scout</span>
     </div>
   </div>
 
@@ -77,13 +77,19 @@
   <div class="flex items-right">
     <div class="ml-4">
       <div *ngIf="userData?.name"><strong>Name:</strong> {{userData?.name}}</div>
+      <div *ngIf="!userData?.name"><strong>Name:</strong> N/A</div>
       <div *ngIf="userData?.bio"><strong>Bio:</strong> {{userData?.bio}}</div>
+      <div *ngIf="!userData?.bio"><strong>Bio:</strong> N/A</div>
       <div *ngIf="userData?.location"><strong>Location:</strong> {{userData?.location}}</div>
+      <div *ngIf="!userData?.location"><strong>Location:</strong> N/A</div>
       <div *ngIf="userData?.twitter">
         <a href="https://twitter.com/{{userData?.twitter_username}}"
           class="inline-block px-4 py-2 mt-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
           Twitter
         </a>
+      </div>
+      <div *ngIf="!userData?.twitter">
+        <p>No Twitter account found.</p>
       </div>
       <div *ngIf="userData?.html_url">
         <a href="https://twitter.com/{{userData?.html_url}}"
@@ -116,15 +122,28 @@
         <div class="font-bold text-xl mb-2">{{ item.name }}</div>
       </a>
       <p class="text-gray-700 text-base">
-        {{ item.description }}
+        <ng-container *ngIf="item.description">
+          {{ item.description }}
+        </ng-container>
+        <ng-container *ngIf="!item.description">
+          No description available.
+        </ng-container>
       </p>
     </div>
     <div class="px-6 pt-4 pb-2">
+      
       <!-- Loop through topics and display them as badges -->
-      <span *ngFor="let topic of item.topics"
-        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">
-        {{ topic }}
-      </span>
+      <ng-container *ngIf="item.topics && item.topics.length > 0">
+        <span *ngFor="let topic of item.topics"
+          class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">
+          {{ topic }}
+        </span>
+      </ng-container>
+      <ng-container *ngIf="!item.topics || item.topics.length === 0">
+        <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">
+          No topics found
+        </span>
+      </ng-container>
     </div>
   </div>
 </div>
