--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   <div
     class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
     <div class="flex items-center flex-shrink-0 text-gray-800 mr-16">
+      <img src="../camping.png" alt="GitHub-Scout Logo" class="h-8 w-8 mr-2">
       <span class="font-semibold text-xl tracking-tight">GitHub-Scout</span>
     </div>
   </div>
